feat: add enzyme and setup tests for tsx

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,6 +1,7 @@
 {
-  "testRegex": "((\\.|/*.)(spec))\\.js?$",
+  "testRegex": "((\\.|/*.)(spec))\\.(ts|tsx)?$",
   "moduleNameMapper": {
     "^.+\\.(css|less|scss)$": "identity-obj-proxy"
-  }
+  },
+  "setupFilesAfterEnv": ["./testSetup.ts"]
 }
