--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
 	"author": "cl4pper",
 	"license": "ISC",
 	"dependencies": {
+		"@babel/preset-typescript": "^7.12.1",
 		"@svgr/webpack": "^4.3.3",
 		"axios": "^0.19.0",
+		"babel-jest": "^26.6.1",
 		"classnames": "^2.2.6",
 		"file-loader": "^4.2.0",
 		"moment": "^2.24.0",
@@ -36,6 +38,8 @@
 		"@babel/preset-react": "^7.6.3",
 		"@storybook/addon-knobs": "^5.3.9",
 		"@storybook/react": "^5.3.9",
+		"@types/enzyme": "^3.10.7",
+		"@types/enzyme-adapter-react-16": "^1.0.6",
 		"@types/jest": "^26.0.15",
 		"@types/react": "^16.9.53",
 		"@types/react-dom": "^16.9.8",
@@ -43,6 +47,9 @@
 		"babel-eslint": "^10.0.3",
 		"babel-loader": "^8.0.5",
 		"css-loader": "^2.1.1",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.5",
+		"enzyme-to-json": "^3.6.1",
 		"eslint": "^6.8.0",
 		"eslint-plugin-react": "^7.18.0",
 		"identity-obj-proxy": "^3.0.0",
