--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
 		"@babel/preset-react": "^7.6.3",
 		"@storybook/addon-knobs": "^5.3.9",
 		"@storybook/react": "^5.3.9",
+		"@testing-library/react": "^11.1.0",
 		"@types/enzyme": "^3.10.7",
 		"@types/enzyme-adapter-react-16": "^1.0.6",
 		"@types/jest": "^26.0.15",
 		"@types/react": "^16.9.53",
 		"@types/react-dom": "^16.9.8",
+		"@types/react-test-renderer": "^16.9.3",
 		"@types/styled-components": "^5.1.4",
 		"babel-eslint": "^10.0.3",
 		"babel-loader": "^8.0.5",
