--- a/jest.config.json
+++ b/jest.config.json
@@ -1,7 +1,9 @@
 {
   "testRegex": "((\\.|/*.)(spec))\\.(ts|tsx)?$",
   "moduleNameMapper": {
-    "^.+\\.(css|less|scss)$": "identity-obj-proxy"
+    "^.+\\.(css|less|scss)$": "identity-obj-proxy",
+    "^@root(.*)$": "<rootDir>/src$1",
+    "^@lib(.*)$": "<rootDir>/src/lib$1"
   },
   "setupFilesAfterEnv": ["./testSetup.ts"]
 }
