--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./src",
     "paths": {
+      "@lib": ["lib/index.ts"],
       "@components": ["components/index.ts"],
       "@containers": ["containers/index.ts"],
       "@assets": ["assets/index.ts"],
